// Copyright 2019 Luis Guill√©n Civera <luisguillenc@gmail.com>. View LICENSE.

syntax = "proto3";

import "github.com/luids-io/api/schemas/tlsutil/common.proto";

package luids.tlsutil.v1;
option go_package = "github.com/luids-io/api/protogen/tlsutilpb";

service Classify {
    rpc Connections (ClassifyConnectionsRequest) returns (ClassifyConnectionsResponse) {}
}

message ClassifyConnectionsRequest {
    repeated ConnectionData connections = 1;
}

message ClassifyConnectionsResponse {
    message Response {
         message Result {
             string Label = 1;
             float prob = 2;
         }
         repeated Result results = 1;
         string err = 2;
    }
    repeated Response responses = 1;
}
